--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/@microsoft/microsoft-graph-client/lib/graph-js-sdk.js"></script>
   
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html>
