Added filter categorie

--- a/index.html
+++ b/index.html
@@ -1,60 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PIT</title>
+    <title>Yurls-API</title>
     <link rel="stylesheet" href="css/index.css">
     <style>
         a {
             text-decoration: none;
         }
-        </style>
+        .filter-options {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-bottom: 10px;
+        }
+        .filter-option {
+            display: flex;
+            align-items: center;
+        }
+        .filter-option label {
+            margin-left: 5px;
+        }
+    </style>
 </head>
 <body>
 <header>
     <div class="header-content">
         <img src="img/logo-yonder.png" alt="logo" class="logo">
-        <input type="search" id="searchInput" oninput="filterImages()" placeholder="Zoeken">
+        <input type="search" id="searchInput" oninput="filterContent()" placeholder="Zoeken">
     </div>
 </header>
-    <main>
-        <div id="categoryContainer"></div>
-
-    
-    </main>
-    <footer>
-        <div class="footer-content">
-
+<main>
+    <div class="filter-options">
+        <div class="filter-option">
+            <input type="checkbox" id="vrFilter" onchange="filterContent()">
+            <label for="vrFilter">VR Games</label>
+        </div>
+        <div class="filter-option">
+            <input type="checkbox" id="freeFilter" onchange="filterContent()">
+            <label for="freeFilter">Gratis</label>
+        </div>
+        <div class="filter-option">
+            <input type="checkbox" id="paidFilter" onchange="filterContent()">
+            <label for="paidFilter">Betaald</label>
+        </div>
+        <div class="filter-option">
+            <input type="checkbox" id="nlFilter" onchange="filterContent()">
+            <label for="nlFilter">Nederlands</label>
+        </div>
+        <div class="filter-option">
+            <input type="checkbox" id="engFilter" onchange="filterContent()">
+            <label for="engFilter">Engels</label>
+        </div>
+    </div>
+    <div id="categoryContainer"></div>
+</main>
+<footer>
+    <div class="footer-content">
         <a href="login.php">
             <p>&copy; 2024 Yonder. All rights reserved.</p>
         </a>
-            <ul class="footer-links">
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </div>
-    </footer>
-    <div id="popupModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2 id="modalTitle">Links for <span id="selectedSubject"></span></h2>
-            <ul id="linksList"></ul>
-            <div class="details-section">
-                <!-- Verwijder platform-container div en voeg platform inline toe zoals taal en prijs -->
-                <span id="platform"></span>
-                <div id="prijs"></div>
-                <div id="taal"></div>
-            </div>
-            <button id="gaDoorButton" class="ga-door-button">Doorgaan</button>
-        </div>
+        <ul class="footer-links">
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/@microsoft/microsoft-graph-client/lib/graph-js-sdk.js"></script>
-  
-    <script src="main.js"></script>
+</footer>
+<div id="popupModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="modalTitle">Links for <span id="selectedSubject"></span></h2>
+        <ul id="linksList"></ul>
+        <div class="details-section">
+            <span id="platform"></span>
+            <div id="prijs"></div>
+            <div id="taal"></div>
+        </div>
+        <button id="gaDoorButton" class="ga-door-button">Doorgaan</button>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/@microsoft/microsoft-graph-client/lib/graph-js-sdk.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
-
